# fictui

./: .gitignore  Cargo.toml  README.md  test.fic
fictui/: Cargo.toml
fictui/src/: interface.rs  lib.rs  main.rs  readout.rs
fictui_core/: Cargo.toml
fictui_core/migrations/1738747028_tiles/: down.sql  up.sql
fictui_core/migrations/1738747053_tile_instances/: down.sql  up.sql
fictui_core/migrations/1738753262_gates/: down.sql  up.sql
fictui_core/src/: aux_data.rs  lib.rs  main.rs  save_data.rs  test.fic  types.rs
fictui_core/src/database/: conversions.rs  gates.rs  mod.rs  tile.rs  tile_instances.rs  tiles.rs
fictui_core/src/database/fields/: direction.rs
fictui_core/src/database/models/: gates.rs  mod.rs  tile_instances.rs  tiles.rs
fictui_core/src/database/queries/: tiles.rs
fictui_core/src/database/tables/: gates.rs  mod.rs  tile_instances.rs  tiles.rs
fictui_core/src/database/types/: direction.rs
fictui_core/src/grid/: mod.rs
fictui_core/src/handler/: edit.rs  mod.rs  play.rs
fictui_core/src/parser/: edit.rs  mod.rs  play.rs  utils.rs
fictui_create/: Cargo.toml
fictui_host/: Cargo.toml
fictui_play/: Cargo.toml
fictui_play/src/: handler.rs  lib.rs  main.rs  plugin.rs  prompt.rs
fictui_play/src/core/: command.rs  grid.rs  grid_data.rs  grid_handlers.rs  grid_maps.rs  mod.rs  save_data.rs  types.rs
fictui_play/src/interface/: layout.rs  map.rs  mod.rs  prompt.rs  readout.rs  utils.rs
fictui_play/src/play/: grid.rs  interface.rs  mod.rs  prompt.rs
src/: interface.rs  lib.rs  main.rs
src/core/: command.rs  grid.rs  grid_data.rs  (+5 more)
(+10 files in other folders)
